--- a/railway.toml
+++ b/railway.toml
@@ -4,8 +4,8 @@ buildCommand = "pip install -r requirements.txt"
 
 [deploy]
 startCommand = "python websocket_server.py"
-restartPolicyType = "on-failure"
-restartPolicyMaxRetries = 5
+restartPolicy = "always"
+numReplicas = 1
 
 [variables]
 PORT = "8081"
