--- a/railway.toml
+++ b/railway.toml
@@ -1,10 +1,11 @@
 [build]
 builder = "nixpacks"
-buildCommand = "pip install -r requirements.txt"
+buildCommand = "python -m pip install --upgrade pip && python -m pip install -r requirements.txt"
 
 [deploy]
-startCommand = "python websocket_server.py"
+startCommand = "python main.py"
 restartPolicy = "always"
 
 [variables]
-PORT = "8081"
+PORT = "8080"
+WEBSOCKET_PORT = "8081"
