--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 Flask-Admin==1.6.1
 Werkzeug==2.3.7
-pycryptodome==3.19.0
+cryptography==41.0.7
 gunicorn==21.2.0
 psycopg2-binary==2.9.9
 websockets==11.0.3
