--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask-Cors==4.0.0
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 Flask-Admin==1.6.1
+Flask-SocketIO==5.3.6
 Werkzeug==2.3.7
 cryptography==41.0.7
 gunicorn==21.2.0
