--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 Flask==2.3.3
-Flask-Cors==4.0.0
-Flask-Login==0.6.3
-Flask-SQLAlchemy==3.1.1
-Flask-Admin==1.6.1
 Flask-SocketIO==5.3.6
-Werkzeug==2.3.7
+Flask-Admin==1.6.1
+Flask-Login==0.6.3
+Flask-CORS==4.0.0
+Flask-SQLAlchemy==3.0.4
+SQLAlchemy==2.0.30
+python-socketio==5.9.0
+eventlet==0.33.3
 cryptography==41.0.7
-gunicorn==21.2.0
-psycopg2-binary==2.9.9
-pycryptodome==3.19.0
+bcrypt==4.0.1
+python-dotenv==1.0.0
+Werkzeug==2.3.7
